# rppg-heart-rate

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LIMITATIONS.md  README.md  demo_video.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/videos/: .gitkeep
models/: .gitkeep
notebooks/: .gitkeep
scripts/: evaluate_classical.py  test_physnet.py  train_physnet.py  train_ubfc.py
src/: __init__.py  logging_config.py
src/app/: __init__.py  main.py
src/app/static/: index.html
src/data/: __init__.py  ubfc_loader.py
src/detection/: __init__.py  face_detector.py  mediapipe_detector.py  roi_extractor.py
src/models/: __init__.py  physnet.py
src/processing/: __init__.py  fft_analyzer.py  filters.py  kalman_filter.py  low_light.py
src/vitals/: __init__.py  heart_rate.py
tests/: conftest.py  test_app_hardening.py  test_fft_analyzer.py  test_imports.py  test_kalman.py  test_method_wiring.py  test_signal_processing.py  test_ubfc_loader.py
